Fix R162 appearance card proportions